building the network for the classifier

--- a/Digitclassifier.ipynb
+++ b/Digitclassifier.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8f7e8a31",
    "metadata": {},
    "outputs": [
@@ -96,6 +96,67 @@
     "print(f\"Batch images shape: {images.shape}\")  # (64, 1, 28, 28) (batch, channel_dim, height,width )\n",
     "print(f\"Batch labels shape: {labels.shape}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "299a644c",
+   "metadata": {},
+   "source": [
+    "# Building the network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "98e8f2a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DigitClassifier(\n",
+      "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
+      "  (layer1): Linear(in_features=784, out_features=128, bias=True)\n",
+      "  (relu1): ReLU()\n",
+      "  (layer2): Linear(in_features=128, out_features=64, bias=True)\n",
+      "  (relu2): ReLU()\n",
+      "  (layer3): Linear(in_features=64, out_features=10, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "class DigitClassifier(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.flatten= nn.Flatten() # Flatten 28x28 image to 784 vector\n",
+    "\n",
+    "        self.layer1= nn.Linear(784, 128)\n",
+    "        self.relu1= nn.ReLU()\n",
+    "        self.layer2= nn.Linear(128,64)\n",
+    "        self.relu2= nn.ReLU()\n",
+    "        self.layer3= nn.Linear(64,10)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x= self.flatten(x)\n",
+    "        x= self.relu1(self.layer1(x))\n",
+    "        x= self.relu2(self.layer2(x))\n",
+    "        x= self.layer3(x)\n",
+    "        return x\n",
+    "    \n",
+    "\n",
+    "model= DigitClassifier()\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05b9dc4b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
