--- a/Digitclassifier.ipynb
+++ b/Digitclassifier.ipynb
@@ -251,6 +251,9 @@
     "\n",
     "    avg_loss = running_loss / len(train_loader)\n",
     "    print(f\"Epoch [{epoch+1}/{num_epochs}] completed. Average Loss: {avg_loss}\\n\")\n",
+    "\n",
+    "\n",
+    "torch.save(model.state_dict(), \"final_model.pth\")\n",
     "\n"
    ]
   },
